--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -18,9 +18,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 .title {
+  display: block;
+  width: 100%;
+  text-align: center;
   color: var(--deep-blue);
   margin: 0;
   padding: 32px 0;
@@ -98,7 +101,7 @@
 @media screen and (min-width: 768px) {
   .container {
     width: 100%;
-    background-color: green;
+    padding-bottom: 88px;
   }
   /* asdasdasdasdasda */
   .section {
@@ -193,6 +196,9 @@
   }
   .logText {
     color: #ff6b08;
+  }
+  .btnGrup {
+    display: none;
   }
   /* asdasdasdasdasdasd */
 }
