--- a/src/layuot/header.module.css
+++ b/src/layuot/header.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@500&display=swap');
 .header {
+  box-sizing: border-box;
   width: 100%;
   height: 60px;
   background: #fff;
