--- a/src/components/logForm/logForm.module.css
+++ b/src/components/logForm/logForm.module.css
@@ -1,16 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@500;600&family=Roboto:wght@700&display=swap');
+p {
+  margin: 0;
+  padding-bottom: 8px;
+}
 .form {
-  width: 400px;
-  height: 430px;
-  background-color: #fff;
+  box-sizing: border-box;
+  width: 320px;
+  height: 428px;
+  padding: 32px 20px;
+  background-image: linear-gradient(
+      0deg,
+      rgba(9, 30, 63, 0.8),
+      rgba(9, 30, 63, 0.8)
+    ),
+    url('../../img/heroBack.jpg');
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
-  /* gap: 20px; */
+  padding-bottom: 32px;
+}
+
+.lable {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
 .googleBtn {
-  margin-top: 40px;
+  margin-top: 32px;
   width: 150px;
   height: 40px;
   background: #f5f7fa;
@@ -23,33 +44,16 @@
   font-weight: 700;
   line-height: 38px;
 }
-p {
-  margin: 0;
-  padding-bottom: 8px;
-}
-.lable {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  /* gap: 8px; */
-  color: #898f9f;
-  font-family: Montserrat;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-.star {
-  color: red;
-}
 .input {
+  padding: 8px;
   box-sizing: border-box;
-  padding: 2px 12px;
-  font-size: 14px;
-  width: 320px;
+  width: 280px;
   height: 42px;
   background: #f5f7fa;
   box-shadow: 0px 1px 2px 0px rgba(29, 29, 27, 0.15) inset;
+}
+.star {
+  color: red;
 }
 .botGrup {
   display: flex;
@@ -57,19 +61,6 @@ p {
   padding-top: 15px;
   text-align: center;
 }
-.regBtn {
-  width: 320px;
-  height: 60px;
-  background: #ff6b08;
-  color: #fff;
-  text-align: center;
-  font-family: Montserrat;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
 .logText {
   cursor: pointer;
   border: none;
@@ -83,4 +74,66 @@ p {
   font-weight: 500;
   line-height: normal;
   color: #ff6b08;
+}
+.regBtn {
+  width: 280px;
+  height: 60px;
+  background: #ff6b08;
+  color: #fff;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+@media screen and (min-width: 768px) {
+  .form {
+    width: 400px;
+    height: 430px;
+    background-color: #fff;
+
+    padding-bottom: 40px;
+    /* gap: 20px; */
+  }
+  .googleBtn {
+    margin-top: 40px;
+    background: #f5f7fa;
+    box-shadow: 0px 2px 2px 0px rgba(9, 30, 63, 0.15);
+    color: #707375;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px;
+  }
+
+  .lable {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    /* gap: 8px; */
+    color: #898f9f;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+
+  .input {
+    box-sizing: border-box;
+    padding: 2px 12px;
+    font-size: 14px;
+    width: 320px;
+    height: 42px;
+    background: #f5f7fa;
+    box-shadow: 0px 1px 2px 0px rgba(29, 29, 27, 0.15) inset;
+  }
+
+  .regBtn {
+    width: 320px;
+    height: 60px;
+  }
 }
