--- a/src/components/regForm/regForm.module.css
+++ b/src/components/regForm/regForm.module.css
@@ -101,6 +101,7 @@ p {
     width: 400px;
     height: 609px;
     background-color: #fff;
+    background-image: none;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
