--- a/src/components/regForm/regForm.module.css
+++ b/src/components/regForm/regForm.module.css
@@ -21,7 +21,13 @@ p {
   align-items: center;
   padding-bottom: 32px;
 }
+.icon {
+  padding-right: 6px;
+}
 .googleBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 32px;
   width: 150px;
   height: 40px;
