--- a/src/components/LibraryBlock/LibraryBlock.module.css
+++ b/src/components/LibraryBlock/LibraryBlock.module.css
@@ -10,6 +10,14 @@
   background-color: #f6f7fb;
   padding-bottom: 139px;
 }
+.block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background-color: #f6f7fb;
+}
 .title {
   display: block;
   width: 100%;
@@ -23,11 +31,12 @@
   line-height: normal;
 }
 .card {
+  box-sizing: border-box;
   display: flex;
   padding: 20px;
   gap: 12px;
   width: 280px;
-  height: 178px;
+  min-height: 178px;
   background-color: #fff;
   box-shadow: 0px 2px 3px 0px rgba(9, 30, 63, 0.1);
 }
@@ -52,6 +61,21 @@
   color: #898f9f;
   font-family: Montserrat;
   font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.resume {
+  position: relative;
+  left: 41px;
+  width: 127px;
+  height: 40px;
+  background: #6d7a8d;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  color: #fff;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
