--- a/src/layuot/header.module.css
+++ b/src/layuot/header.module.css
@@ -22,13 +22,16 @@
   line-height: normal;
   text-decoration: none;
 }
-.userBox {
+.userBox,
+.navBox {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 14px;
+  gap: 7px;
 }
-.item {
+
+.item,
+.userItem {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,6 +46,10 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+}
+
+.fullname {
+  display: none;
 }
 .breake {
   display: block;
@@ -61,19 +68,46 @@
   line-height: normal;
   text-decoration-line: underline;
 }
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-  /* Your CSS styles for screen widths between 321px and 767px go here */
-  .header {
-    padding-left: 32px;
-    justify-content: flex-start;
-  }
-  /* Add more styles for other elements as needed */
+.linkOut {
+  color: var(--deep-blue, #242a37);
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  text-decoration-line: underline;
 }
-@media screen and (min-width: 1280px) {
-  /* Your CSS styles for screen widths between 321px and 767px go here */
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .header {
+    position: relative;
+    padding-left: 32px;
+    justify-content: space-between;
+    padding-right: 32px;
+  }
+  .userTumb {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    gap: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .fullname {
+    display: inline-block;
+    color: var(--deep-blue, #242a37);
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 38px; /* 271.429% */
+  }
+  .userItem {
+  }
+}
+@media screen and (min-width: 1200px) {
   .header {
     padding-left: 32px;
-    justify-content: flex-start;
   }
-  /* Add more styles for other elements as needed */
 }
