--- a/src/components/BoockList/BoockList.module.css
+++ b/src/components/BoockList/BoockList.module.css
@@ -3,18 +3,6 @@
   flex-direction: column;
   gap: 20px;
 }
-.title {
-  display: block;
-  width: 100%;
-  text-align: left;
-  padding-left: 20px;
-  color: #242a37;
-  font-family: Montserrat;
-  font-size: 19px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
 .card {
   position: relative;
   box-sizing: border-box;
@@ -22,7 +10,7 @@
   padding: 20px;
   gap: 12px;
   width: 280px;
-  min-height: 178px;
+  height: 178px;
   background-color: #fff;
   box-shadow: 0px 2px 3px 0px rgba(9, 30, 63, 0.1);
 }
@@ -78,4 +66,33 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+@media screen and (min-width: 768px) {
+  .btnBox {
+    width: 95%;
+  }
+  .card {
+    width: 704px;
+    height: 62px;
+  }
+  .tumb {
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+  }
+  .boockText {
+    flex: 1;
+  }
+  .tumb .boockText:first-child {
+    flex: 2;
+  }
+  .tip {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card {
+    width: 1168px;
+  }
 }
