--- a/src/components/LibraryBlock/LibraryBlock.module.css
+++ b/src/components/LibraryBlock/LibraryBlock.module.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@500&family=Roboto:wght@700&display=swap');
-
+.optionBox {
+  display: none;
+}
 .bookList {
   position: relative;
   display: flex;
@@ -15,7 +17,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
   background-color: #f6f7fb;
 }
 .title {
@@ -23,6 +24,7 @@
   width: 100%;
   text-align: left;
   padding-left: 20px;
+  padding-bottom: 24px;
   color: #242a37;
   font-family: Montserrat;
   font-size: 19px;
@@ -30,55 +32,8 @@
   font-weight: 600;
   line-height: normal;
 }
-.card {
-  box-sizing: border-box;
-  display: flex;
-  padding: 20px;
-  gap: 12px;
-  width: 280px;
-  min-height: 178px;
-  background-color: #fff;
-  box-shadow: 0px 2px 3px 0px rgba(9, 30, 63, 0.1);
-}
-.tumb {
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-  width: 256px;
-}
-.boockText {
-  color: #242a37;
-  font-family: Montserrat;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
 .tip {
-  display: inline-block;
-  width: 80px;
-  margin: 0;
-  color: #898f9f;
-  font-family: Montserrat;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-.resume {
-  position: relative;
-  left: 41px;
-  width: 127px;
-  height: 40px;
-  background: #6d7a8d;
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
-  color: #fff;
-  text-align: center;
-  font-family: Montserrat;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+  display: none;
 }
 .start {
   box-sizing: border-box;
@@ -100,4 +55,37 @@
   transform: translateX(-50%);
   background-color: transparent;
   border: none;
+}
+@media screen and (min-width: 768px) {
+  .optionBox {
+    display: block;
+  }
+  .tip {
+    padding-left: 20px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+  .tiptext {
+    flex: 1;
+    color: #898f9f;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  .tip .tiptext:first-child {
+    flex: 2;
+  }
+  .add {
+    display: none;
+  }
+  .start {
+    width: 200px;
+  }
+}
+@media screen and (min-width: 768px) {
+  
 }
