--- a/src/components/quote/quote.module.css
+++ b/src/components/quote/quote.module.css
@@ -47,11 +47,18 @@
   line-height: normal;
 }
 @media screen and (min-width: 768px) {
+  .quote {
+    width: 397px;
+    height: 232px;
+    padding-left: 100px;
+  }
   .text {
-    padding-top: 126px;
+    width: 397px;
+    height: 114px;
+    font-size: 24px;
   }
   .top {
-    top: 106px;
+    top: 36px;
   }
 }
 @media screen and (min-width: 1280px) {
