--- a/src/components/BoockList/BoockList.module.css
+++ b/src/components/BoockList/BoockList.module.css
@@ -70,10 +70,14 @@
 @media screen and (min-width: 768px) {
   .btnBox {
     width: 95%;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 20px;
   }
   .card {
-    width: 704px;
+    min-width: 704px;
     height: 62px;
+    padding: 8px 20px;
   }
   .tumb {
     width: 100%;
@@ -93,6 +97,9 @@
 }
 @media screen and (min-width: 1200px) {
   .card {
-    width: 1168px;
+    width: 100%;
+  }
+  .list {
+    width: 100%;
   }
 }
