--- a/src/components/CountDown/CountDown.module.css
+++ b/src/components/CountDown/CountDown.module.css
@@ -55,3 +55,10 @@
   font-weight: 500;
   line-height: normal;
 }
+@media screen and (min-width: 768px) {
+  .container {
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
