--- a/src/components/NewTraining/NewTraining.module.css
+++ b/src/components/NewTraining/NewTraining.module.css
@@ -6,6 +6,7 @@
   background: #f6f7fb;
 }
 .link {
+  z-index: 10;
   position: absolute;
   top: 20px;
   left: 20px;
@@ -39,9 +40,13 @@
   font-weight: 600;
   line-height: normal;
 }
+.labelStart,
+.labelFinish,
 .label {
   position: relative;
 }
+.labelStart:active,
+.labelFinish:active,
 .label:active {
   z-index: 5;
 }
@@ -94,4 +99,34 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    position: static;
+  }
+  .form {
+    width: 704px;
+    padding: 20px;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+  .btn {
+    margin: 0;
+  }
+  .book {
+    width: 460px;
+  }
+
+  .link {
+    display: none;
+  }
+  .title {
+    width: 704px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form {
+    width: 928px;
+  }
 }
