--- a/src/layuot/header.module.css
+++ b/src/layuot/header.module.css
@@ -77,7 +77,7 @@
   line-height: normal;
   text-decoration-line: underline;
 }
-@media screen and (min-width: 768px) and (max-width: 1279px) {
+@media screen and (min-width: 768px) {
   .header {
     position: relative;
     padding-left: 32px;
