--- a/src/components/Result/Result.module.css
+++ b/src/components/Result/Result.module.css
@@ -27,6 +27,7 @@
 }
 .date,
 .page {
+  box-sizing: border-box;
   width: 110px;
   height: 42px;
   flex-shrink: 0;
@@ -34,6 +35,7 @@
   background: #f6f7fb;
 }
 .btn {
+  box-sizing: border-box;
   margin-top: 30px;
   width: 240px;
   height: 40px;
@@ -48,7 +50,12 @@
   line-height: normal;
 }
 .list {
-  padding-top: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: 100px;
+  overflow: scroll;
+  margin-top: 24px;
   list-style: none;
 }
 .item {
@@ -78,10 +85,36 @@
   line-height: normal;
   text-transform: uppercase;
 }
-.time,.tip{
-    color: #898F9F;
+.time,
+.tip {
+  color: #898f9f;
 }
 .tip {
-    padding-left: 4px;
-    text-transform: lowercase;
+  padding-left: 4px;
+  text-transform: lowercase;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .container {
+    width: 704px;
+  }
+  .form {
+    padding: 0;
+    align-items: flex-end;
+  }
+  .btn {
+    height: 42px;
+  }
+  .list {
+    height: 176px;
+    padding-left: 86px;
+    width: 220px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    margin: 0;
+  }
+  .list {
+    padding-top: 12px;
+  }
 }
