--- a/src/components/BoockList/BoockList.module.css
+++ b/src/components/BoockList/BoockList.module.css
@@ -16,7 +16,7 @@
 }
 .btnBox {
   position: absolute;
-  z-index: 5;
+  /* z-index: 5; */
   display: flex;
   justify-content: space-between;
   align-items: center;
