--- a/src/components/BoockList/BoockList.module.css
+++ b/src/components/BoockList/BoockList.module.css
@@ -91,6 +91,9 @@
   .tumb .boockText:first-child {
     flex: 2;
   }
+  .resume {
+    transform: translateX(-100px);
+  }
   .tip {
     display: none;
   }
