--- a/src/components/BoockList/BookList.module.css
+++ b/src/components/BoockList/BookList.module.css
@@ -13,6 +13,7 @@
   height: 178px;
   background-color: #fff;
   box-shadow: 0px 2px 3px 0px rgba(9, 30, 63, 0.1);
+  cursor: pointer;
 }
 .btnBox {
   position: absolute;
@@ -33,7 +34,7 @@
   width: 256px;
   padding-left: 34px;
 }
-.boockText {
+.bookText {
   color: #242a37;
   font-family: Montserrat;
   font-size: 12px;
