--- a/src/components/TrainingBlock/TrainingBlock.module.css
+++ b/src/components/TrainingBlock/TrainingBlock.module.css
@@ -20,7 +20,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   width: 280px;
   height: 290px;
@@ -56,7 +56,7 @@
     width: 704px;
     height: 340px;
     padding: 10px 35px;
-    align-items: flex-start;
+    align-items: center;
   }
 }
 @media screen and (min-width: 1200px) {
